--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -111,7 +111,7 @@ html, body {
 }
 #inner-wrapper {
 	border-top: 11px solid #329fd7; 
-	padding-bottom: 2em;
+	padding: 0 1em 2em 1em;
 	clear:both;
 }
 
