--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -748,102 +748,6 @@ dl.portletNavigationTree .navTreeLevel3 li a {
 
 /* @end */
 
-/* @group Footer */
-
-#footer-wrapper {
-/* Sticky footer */
-    height: 16em;
-	background: #329fd7;
-}
-
-#footer-gradient {
-	background: top left url(images/sprite-ploneorg.png) repeat-x;
-	height: 7px;
-}
-
-#push {
-/* Sticky footer */
-	height: 16em;
-}
-
-#footer {
-	color: White;
-	font-family: "Lucida Grande", Verdana;
-	font-size: 10px;
-	margin: 0 auto;
-	padding: 2em 0;
-	width: 800px;
-}
-
-#footer-logo {
-	float: left;
-	background-image: url(images/sprite-ploneorg.png);
-	background-position: 0 -376px;
-	width: 114px;
-	height: 44px;
-	border-right: 1px solid white;
-	margin-right: 1em;
-}
-
-#footer-logo img {
-	border-right: 1px solid white;
-}
-
-#footer-text {
-	padding: 2em 0;
-}
-
-/* @end */
-
-/* @group Site map */
-
-#sitemap  {
-/* IE:
-	clear: both;
-	margin-bottom: 3em;
-	float:left;
-*/
-	width: 100%;
-	clear: both;
-
-}
-
-#sitemap dl {
-	font-family: "Lucida Grande", Verdana;
-	color: White;
-	display: inline-block;
-	vertical-align: top;
-	width: 19%;
-/* IE:   width: 16.3%;*/
-/* IE:   float: left;*/
-
-}
-#sitemap dl a {
-	font-size: 10px;
-	color: White;
-	text-decoration: none;
-	display: block;
-	padding: 0.25em 6px;
-}
-#sitemap dl a:hover {
-	color: #329fd7;
-	background-color: White;
-}
-
-#sitemap dl dt {
-	font-weight: bold;
-}
-#sitemap dl dt a {
-	color: White;
-	font-size: 12px !important;
-}
-#sitemap dl dd {
-	margin:0;
-	font-weight: normal;
-}
-
-/* @end */
-
 /* @group Content Area */
 
 #content {
@@ -1833,6 +1737,82 @@ dl.toc dd ol {
 
 /* @end */
 
+/* @group Footer */
+
+#footer-wrapper {
+/* Sticky footer */
+    height: 16em;
+	background: #329fd7;
+}
+
+#footer-gradient {
+	background: top left url(images/sprite-ploneorg.png) repeat-x;
+	height: 7px;
+}
+
+#push {
+/* Sticky footer */
+	height: 16em;
+}
+
+#footer {
+	color: White;
+	font-family: "Lucida Grande", Verdana;
+	margin: 0 auto;
+	padding: 1em 0;
+	width: 800px;
+}
+
+#footer p {
+	font-size: 0.7em;
+}
+
+#footer-logo {
+	float: left;
+	background-image: url(images/sprite-ploneorg.png);
+	background-position: 0 -376px;
+	width: 114px;
+	height: 44px;
+	border-right: 1px solid white;
+	margin: 0 1em 0 0.5em;
+}
+
+#sitemap  {
+	width: 100%;
+	clear: both;
+	padding-top: 1em;
+/* IE:
+	clear: both;
+	margin-bottom: 3em;
+	float:left;
+*/
+}
+
+#sitemap dl {
+	font-family: "Lucida Grande", Verdana;
+	color: White;
+	display: inline-block;
+	vertical-align: top;
+	width: 20%;
+/* IE:   width: 16.3%;*/
+/* IE:   float: left;*/
+
+}
+#sitemap dl a {
+	font-size: 0.7em;
+	color: White;
+	display: block;
+	padding: 0.25em 6px;
+}
+#sitemap dl a:hover {
+	color: #329fd7;
+	background-color: White;
+}
+
+#sitemap dl dt a {
+	font-size: 0.75em;
+}
+/* @end */
 
 /* @group Visual editor */
 
