--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -194,6 +194,8 @@ html, body {
 	/*color: transparent;*/
 	border-left: none;
 	/*padding-left: 0;*/
+	background: 1.2em 0.3em url(images/plone-icon-24.png) no-repeat;
+	color: transparent;
 }
 
 #sub-nav {
