--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -191,11 +191,14 @@ html, body {
 
 #main-nav li:first-child a {
 	/*XXX TODO: mini-logo goes here*/
-	/*color: transparent;*/
 	border-left: none;
-	/*padding-left: 0;*/
 	background: 1.2em 0.3em url(images/plone-icon-24.png) no-repeat;
 	color: transparent;
+}
+
+#main-nav li:first-child a:hover {
+	border-left: none;
+	background: 1.2em 0.3em url(images/plone-icon-24-selected.png) no-repeat;
 }
 
 #sub-nav {
