Let's see how dimming the logo looks like.
svn path=/new.plone.org/trunk/; revision=25551

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -197,8 +197,11 @@ html, body {
 }
 
 #main-nav li:first-child a:hover {
-	border-left: none;
 	background: 1.2em 0.3em url(images/plone-icon-24-selected.png) no-repeat;
+}
+
+body.template-ploneorg_frontpage #main-nav li:first-child a {
+	opacity: 0.1;	
 }
 
 #sub-nav {
