--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -189,23 +189,30 @@ html, body {
 	line-height: 29px;
 }
 
+#main-nav li:first-child {
+	display: inline-block;
+	width: 2.93em !important;
+}
+
 #main-nav li:first-child a {
 	/*XXX TODO: mini-logo goes here*/
 	border-left: none;
-	background: 1.2em 0.3em url(images/plone-icon-24.png) no-repeat;
+	background: 0.5em 0.3em url(images/plone-icon-24.png) no-repeat;
 	color: transparent;
+	padding: 0.4em 0 0.6em;
 }
 
 #main-nav li:first-child a:hover {
-	background: 1.2em 0.3em url(images/plone-icon-24-selected.png) no-repeat;
+	background: 0.5em 0.3em url(images/plone-icon-24-selected.png) no-repeat;
 }
 
 body.template-ploneorg_frontpage #main-nav li:first-child a {
 	opacity: 0.2;
+	padding: 0.4em 0 0.6em;
 }
 body.template-ploneorg_frontpage #main-nav li:first-child a:hover {
 	cursor: default;
-	background: 1.2em 0.3em url(images/plone-icon-24.png) no-repeat;
+	background: 0.5em 0.3em url(images/plone-icon-24.png) no-repeat;
 }
 
 #sub-nav {
@@ -220,7 +227,7 @@ body.template-ploneorg_frontpage #main-nav li:first-child a:hover {
 
 ul.navigation li a,
 ul.navigation li a:visited {
-	padding: 6px 8px;
+	padding: 0.4em 0.6em;
 	color: Black;
 	font-weight: bold;
 	border-right: 1px solid #dcdcdc;
