--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1053,27 +1053,29 @@ table.listing a {
 
 div.listingBar {
 	font-size: 13px;	
+	margin: 1em 0;
 }
 
 div.listingBar a {
-	border: none !important;
+	display: inline-block;
+	padding: 0.25em 0.5em;
+	border: 1px solid #ccc;
 }
 
 div.listingBar a:hover {
 	color: White !important;
-	background-color: #329fd7;
+	background-color: #329fd7 !important;
+	border-color: #329fd7 !important;
 }
 
-div.listingBar a.listingNext {
-	display: block;
-	width: 50%;
+div.listingBar a.listingNext,
+div.listingBar .next {
+	display: inline-block;
 	float: right;
-	text-align: right;
 }
 
 div.listingBar a.listingPrevious {
-	display: block;
-	width: 50%;
+	display: inline-block;
 }
 
 
