--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1056,6 +1056,18 @@ div.listingBar {
 	margin: 1em 0;
 }
 
+div.listingBar a.listingNext,
+div.listingBar .next {
+	display: inline-block;
+	float: right;
+}
+
+div.listingBar a.listingPrevious,
+div.listingBar .previous {
+	display: inline-block;
+}
+
+
 div.listingBar a {
 	display: inline-block;
 	padding: 0.25em 0.5em;
@@ -1068,15 +1080,6 @@ div.listingBar a:hover {
 	border-color: #329fd7 !important;
 }
 
-div.listingBar a.listingNext,
-div.listingBar .next {
-	display: inline-block;
-	float: right;
-}
-
-div.listingBar a.listingPrevious {
-	display: inline-block;
-}
 
 
 /* @end */
