Fixing login form.
svn path=/new.plone.org/trunk/; revision=25580

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1650,26 +1650,6 @@ dl.enableFormTabbing dd {
 margin-left: 0;
 padding-top: 2em;
 }
-#login-form {
-width: 30em;
-margin: 0 auto;
-}
-#login-form .field {
-clear: none;
-}
-#login-form input {
-font-size: 150%;
-}
-#login-form input.context {
-padding: 1px 10px 1px 20px;
-background-position: 9px 5px;
-margin-bottom: 1em;
-}
-#forgotten-password {
-float: right;
-width: 35%;
-margin: 0 1em;
-}
 #content input.searchButton {
 }
 .searchSection {
@@ -1729,6 +1709,17 @@ width: 99%;
 tr.selected {
 background-color: #ffa;
 }
+
+/* @group Login form */
+
+#login-form input {
+font-size: 150%;
+width: inherit;
+}
+
+
+
+/* @end */
 
 /* @end */
 
