--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -34,10 +34,12 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	letter-spacing: -1px;
 	font-family: "Helvetica Neue", Arial, sans-serif; 
 	font-weight: bold;
 	line-height: 125%;
+}
+h1, h2 {
+	letter-spacing: -1px;
 }
 h1 {
 	font-size: 1.625em; /* 26px equiv */
@@ -809,7 +811,6 @@ dl.portlet ul {
 	margin-right: 1em;
 	margin-bottom: 1em;
 	line-height: 1.5em;
-	color: black;
 	font-size: 13px;
 }
 
